ASG_show_your_work/10-lobadbalancer.tf
resource "aws_lb" "main_alb" {
  name               = "app1-load-balancer"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.tf-demo-sg.id]
  subnets            = [
    aws_subnet.public_a.id,
    aws_subnet.public_b.id,
    aws_subnet.public_c.id
  ]
  enable_deletion_protection = false
#Lots of death and suffering here, make sure it's false

  tags = {
    Name    = "App1LoadBalancer"
    Service = "App1"
    Owner   = "User"
    Project = "Web Service"
  }
}

# Application Load Balancer listening on port 80 to forward traffic to target group
resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.main_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.main.arn
  }
}

# # data "aws_acm_certificate" "cert" {
# #   domain   = "balerica-aisecops.com"
# #   statuses = ["ISSUED"]
# #   most_recent = true
# # }


# resource "aws_lb_listener" "https" {
#   load_balancer_arn = aws_lb.main_alb.arn
#   port              = 443
#   protocol          = "HTTPS"
#   ssl_policy        = "ELBSecurityPolicy-2016-08"  # or whichever policy suits your requirements
#   certificate_arn   = data.aws_acm_certificate.cert.arn



#   default_action {
#     type             = "forward"
#     target_group_arn = aws_lb.main_alb.arn
#   }
# }

output "lb_dns_name" {
value       = aws_lb.main_alb
description = "The DNS name of the App1 Load Balancer."
}
